--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <main>
     <div class ="card">
-        <img class ="qr-code" src ="images/image-qr-code.png"/>
+        <img class ="qr-code" src ="images/image-qr-code.png" alt="image of qr code"/>
       <div class ="text">
         <p class="bold-text">Improve your front-end<br> skills by building projects</p>
         <p class ="light-text"> Scan the QR code to visit Frontend<br> Mentor and take your coding skills to<br> the next level</p>
